<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SetupActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/hyperionlogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/addr_label"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/server_addr_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789."
                android:hint="@string/server_addr_hint"
                android:importantForAutofill="no"
                android:inputType="number|numberDecimal"
                android:singleLine="true"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/port_label"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/server_port_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/server_port_hint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLines="1"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/connect_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_button" />

    <ProgressBar
        android:id="@+id/connecting"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</LinearLayout>